--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-saga": "^0.3.1",
     "redux": "^4.0.1",
+    "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
